--- a/index.qmd
+++ b/index.qmd
@@ -1,8 +1,12 @@
 ---
-title: "Home"
+title: "Religious Dewdrops"
 listing:
   contents: posts
   sort: "date desc"
   type: default
   categories: true
+  sort-ui: false
+  filter-ui: false
+page-layout: full
+title-block-banner: false
 ---
